# actix-library

./: Cargo.toml  diesel.toml
migrations/2024-11-14-035628_create_auth/: down.sql  up.sql
migrations/2024-11-14-035728_create_users/: up.sql
src/: main.rs
src/db/: db.rs  library.db
src/handlers/: health_handlers.rs
src/models/: auth.rs  mod.rs  user.rs
src/queries/: health_queries.rs
src/schema/: schema.rs
src/utils/: mod.rs
