[package]
name = "actix-library"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
bcrypt = "0.11"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
simplelog = "0.11"

[dependencies.actix-session]
version = "0.7.2"

[dependencies.actix-identity]
version = "0.4.0"